tests/NormalTests/paczka1/fuzzy1/42008471.err
Error in line 3: vhwv S241 0,9
Error in line 2: qBRLYeN3 S918 83,7
Error in line 10: Towvt S963 44,4
Error in line 15: xSnF2dhn2b3 S963 84,2
Error in line 24: qBRLYeN3 S918 365,5
Error in line 19: xSnF2dhn2b3 S918 59,9
